--- a/style.css
+++ b/style.css
@@ -15,13 +15,19 @@
     height:100%;
 }
 .debug [class^="col"]{
-    background-color: pink;
+    background-color: rgba(255, 192, 203, 0.37);
+    border: 1px solid rgba(201, 22, 22, 0.521);
 }
 .debug .portfolio .row{
     height: 50%;
 }
 .debug .portfolio [class^="col"]{
     background-color: coral;
+    border: 1px solid rgba(0, 0, 0, 0.212);
+}
+.debug .about [class^="col"],
+.debug .contact [class^="col"]{
+    height: 100px;
 }
 /* #endregion ******* DEBUG ******* */
 .dark_blue_bg{
