--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@
     content:"";
     display: inline-block;
     height: 3px;
-    width: 150px;
+    width: 30%;
     background-color: white;
     border-radius: 3px;
     vertical-align: middle;
