--- a/style.css
+++ b/style.css
@@ -58,9 +58,13 @@
     display: inline-block;
     height: 3px;
     width: 30%;
-    background-color: white;
+    background-color: black;
     border-radius: 3px;
     vertical-align: middle;
+}
+.star_splitter.pseudo_white::before,
+.star_splitter.pseudo_white::after{
+    background-color: white;
 }
 /* #endregion ******* UTILITY ******* */
 
